[workspace]
members = ["cpp", "tools/*"]
resolver = "2"

[workspace.package]
version = "0.8.2"
authors = ["Adolfo Ochagavía <github@adolfo.ochagavia.nl>", "Bas Zalmstra <zalmstra.bas@gmail.com>", "Tim de Jager <tdejager89@gmail.com>"]
homepage = "https://github.com/mamba-org/resolvo"
repository = "https://github.com/mamba-org/resolvo"
license = "BSD-3-Clause"
edition = "2021"
readme = "README.md"
keywords = ["dependency", "solver", "version"]
categories= ["algorithms"]

[package]
name = "resolvo"
version.workspace = true
authors.workspace = true
description= "Fast package resolver written in Rust (CDCL based SAT solving)"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
ahash = "0.8.11"
itertools = "0.13"
petgraph = "0.6.5"
tracing = "0.1.40"
elsa = "1.10.0"
bitvec = "1.0.1"
serde = { version = "1.0", features = ["derive"], optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
event-listener = "5.3"
indexmap = "2"
tokio = { version = "1.37", features = ["rt"], optional = true }
async-std = { version = "1.12", default-features = false, features = ["alloc", "default"], optional = true }

[dev-dependencies]
insta = "1.39.0"
proptest = "1.2"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
tokio = { version = "1.35.1", features = ["time", "rt"] }
resolvo = { path = ".", features = ["tokio"] }
serde_json = "1.0"
