[workspace]
members = ["cpp", "tools/*"]
resolver = "2"

[workspace.package]
version = "0.9.2"
authors = [
    "Adolfo Ochagavía <github@adolfo.ochagavia.nl>",
    "Bas Zalmstra <zalmstra.bas@gmail.com>",
    "Tim de Jager <tdejager89@gmail.com>",
]
homepage = "https://github.com/mamba-org/resolvo"
repository = "https://github.com/mamba-org/resolvo"
license = "BSD-3-Clause"
edition = "2024"
readme = "README.md"
keywords = ["dependency", "solver", "version"]
categories = ["algorithms"]

[package]
name = "resolvo"
version.workspace = true
authors.workspace = true
description = "Fast package resolver written in Rust (CDCL based SAT solving)"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[features]
diagnostics = ["tabwriter", "human_bytes"]

[dependencies]
ahash = "0.8.11"
itertools = "0.14"
petgraph = "0.7.1"
tracing = "0.1.41"
elsa = "1.10.0"
bitvec = "1.0.1"
serde = { version = "1.0", features = ["derive"], optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
event-listener = "5.4"
indexmap = "2"
tokio = { version = "1.42", features = ["rt"], optional = true }
async-std = { version = "1.13", default-features = false, features = [
    "alloc",
    "default",
], optional = true }
version-ranges = { version = "0.1.1", optional = true }
# Dependencies for the diagnostics feature
tabwriter = { version = "1.4.0", optional = true }
human_bytes = { version = "0.4.3", optional = true }

[dev-dependencies]
insta = "1.42.0"
proptest = "1.6"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
tokio = { version = "1.42.0", features = ["time", "rt"] }
resolvo = { path = ".", features = ["tokio", "version-ranges"] }
serde_json = "1.0"
