[package]
name = "resolvo_cpp"
description = "Resolvo C++ integration"
version = "0.1.0"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
resolvo = { version = "0.8.0", path = "../" }

[build-dependencies]
anyhow = "1"
cbindgen = "0.26.0"

