[package]
name = "resolvo_cpp"
description = "Resolvo C++ integration"
version = "0.2.1"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
resolvo = { path = "../" }

[build-dependencies]
anyhow = "1"
cbindgen = "0.27.0"

