[package]
name = "solve-snapshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resolvo = { path = "../../../resolvo", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
serde_json = "1.0"
serde = { version = "1.0.196", features = ["derive"] }