[package]
name = "solve-snapshot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
resolvo = { path = "../..", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
serde_json = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
rand = "0.8.5"
itertools = "0.14.0"
console = "0.15.10"
